force-app/main/default/objects/SFDC_Services_Project__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>SFDC Services Projects</relationshipLabel>
    <relationshipName>SFDC_Services_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>