force-app/main/default/objects/SFDC_Services_Project__c/fields/Latest_Service_Invoice_Batch__c.field-meta.xml
<CustomField>
    <fullName>Latest_Service_Invoice_Batch__c</fullName>
    <label>Latest Service Invoice Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>