force-app/main/default/objects/SFDC_Services_Project__c/fields/OpenAir_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>OpenAir_Project_ID__c</fullName>
    <label>OpenAir Project ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>