force-app/main/default/objects/SFDC_Services_Project__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <label>Project ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>