force-app/main/default/objects/SFDC_Services_Project__c/fields/Project_Subsidiary_Address__c.field-meta.xml
<CustomField>
    <fullName>Project_Subsidiary_Address__c</fullName>
    <formula>&apos;.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Subsidiary Address</label>
    <type>Text</type>
</CustomField>