force-app/main/default/objects/SFDC_Services_Project__c/fields/Services_Project_Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Services_Project_Invoice_Name__c</fullName>
    <description>BIZ-50397:Services Project Invoice Name to be displayed on Invoice template</description>
    <label>Invoice Service Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>