force-app/main/default/objects/SFDC_Services_Project__c/fields/Subtotal_from_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_from_Invoices__c</fullName>
    <label>Subtotal from Invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>