force-app/main/default/objects/SFDC_Services_Project__c/fields/Summarize_Current_Batch__c.field-meta.xml
<CustomField>
    <fullName>Summarize_Current_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Summarize Current Batch</label>
    <type>Checkbox</type>
</CustomField>